Fixes issue with main bleed into Header on largest view

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -26,10 +26,9 @@
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1300px) {
   .Header {
     background-color: transparent;
-    /* text-shadow: 0 2px 1px rgba(0, 0, 0, 0.15); */
     box-shadow: none;
   }
 }
